--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,10 +13,12 @@
     "@tensorflow/tfjs": "^4.22.0",
     "expo": "~54.0.30",
     "expo-asset": "^12.0.12",
+    "expo-blur": "^15.0.8",
     "expo-constants": "^18.0.12",
     "expo-file-system": "^19.0.21",
     "expo-haptics": "^15.0.8",
     "expo-image-picker": "^17.0.10",
+    "expo-linear-gradient": "^15.0.8",
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.21",
     "expo-status-bar": "~3.0.9",
@@ -26,6 +28,7 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-reanimated": "^4.2.1",
+    "react-native-worklets": "^0.7.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
